2008-06-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Add coding cookie.

2008-06-02  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-detect-meta-charset): Use also ';' as delimiter.

2008-05-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-examine-command-line-args): Treat the null string given
	as a url in the command line args as `w3m-home-page' or "about:".

2008-05-28  Naohiro Aota  <nao.aota@gmail.com>

	* doc/emacs-w3m.texi (Inline Images): Update.

	* doc/emacs-w3m-ja.texi (Inline Images): Ditto.

2008-05-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-readable-string): Don't decode url if it looks not to
	have been encoded.
	(w3m-current-longest-line): New variable.
	(w3m-set-current-longest-line): New function.
	(w3m-scroll-left, w3m-shift-left): Don't scroll the window endlessly;
	beep if the window can't be scrolled any more.
	(w3m-scroll-right, w3m-shift-right): Beep if the window can't be
	scrolled any more.

2008-05-25  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-relationship-estimate-rules): Fix regexp for Google
	search within EmacsWiki.

2008-05-20  Naohiro Aota  <nao.aota@gmail.com>

	* README: Add information about how to create `configure' script.

	* README.ja: Ditto.

	* w3m.el (w3m-goto-url): Delayed encoding of fragment part.

2008-05-18  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-cookie.el (w3m-cookie-save-current-site-cookies): New function.
	(w3m-cookie-save): Add optional argument "domain".

2008-05-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-add-text-properties): New inline macro.
	(mew-w3m-view-inline-image): Use `mew-w3m-add-text-properties'.
	(mew-mime-text/html-w3m): Ditto.

2008-05-09  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-cookie.el (w3m-cookie-save): Make it interactive function.
	(w3m-cookie-save-cookies): New variable.
	(w3m-cookie-shutdown): Use it.

	* w3m.el (toplevel): Shutdown cookie system when exiting emacs.

2008-05-08  Naohiro Aota  <nao.aota@gmail.com>
